datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  password  String
  firstname String?
  lastname  String?

  posts     Post[]
  roles     Roles[]
}

model Post {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean
  title     String
  content   String?
  author    User?    @relation(fields: [authorId], references: [id])
  authorId  String?
}

model RoleNames {
  id BigInt @id @default(autoincrement())
  name UserRole @unique
  
  roles Roles[]
}

model Roles {
  userId String
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  roleId BigInt
  roleName RoleNames @relation(fields: [roleId], references: [id], onDelete: Cascade)

  @@id([userId, roleId])
}

enum UserRole {
  ADMIN
  GUEST
}
