//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  roles Roles [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table RoleNames {
  id BigInt [pk, increment]
  name UserRole [unique, not null]
  roles Roles [not null]
}

Table Roles {
  userId String [not null]
  user User [not null]
  roleId BigInt [not null]
  roleName RoleNames [not null]

  indexes {
    (userId, roleId) [pk]
  }
}

Enum UserRole {
  ADMIN
  GUEST
}

Ref: Post.authorId > User.id

Ref: Roles.userId > User.id [delete: Cascade]

Ref: Roles.roleId > RoleNames.id [delete: Cascade]